--- a/.drone.yml
+++ b/.drone.yml
@@ -2,14 +2,36 @@ kind: pipeline
 name: default
 
 steps:
-- name: app
-  image: chrztoph/texterify:1
-  commands:
-  - bin/rails db:create
-  - bin/rails db:migrate
-  - bin/rails db:seed
-  - bin/rails test
+  - name: build
+    image: docker
+    commands:
+      - docker build -t chrztoph/texterify:app .
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  - name: app
+    image: chrztoph/texterify:app
+    commands:
+      - bin/rails db:create
+      - bin/rails db:migrate
+      - bin/rails db:seed
+      - SECRET_KEY_BASE=`bin/rails secret` bin/rails test
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  - name: publish
+    image: docker
+    environment:
+      DOCKER_USERNAME:
+        from_secret: DOCKER_USERNAME
+      DOCKER_PASSWORD:
+        from_secret: DOCKER_PASSWORD
+    commands:
+      - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
+      - docker push chrztoph/texterify:app
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
 
 services:
-- name: postgres
-  image: postgres
+  - name: postgres
+    image: postgres
