--- a/.drone.yml
+++ b/.drone.yml
@@ -7,7 +7,7 @@ steps:
   commands:
   - docker build -t chrztoph/texterify:app .
   volumes:
-  - /var/run/docker.sock:/var/run/docker.sock
+  - "/var/run/docker.sock:/var/run/docker.sock"
 
 - name: app
   image: chrztoph/texterify:app
