--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ services:
   - postgresql
 
 install:
-  - docker-compose up
+  - docker-compose up -d
   # - docker build -t chrztoph/texterify .
   # - docker run --name texterify -d --env SECRET_KEY_BASE=$SECRET_KEY_BASE chrztoph/texterify
 
