Try to fix travis build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
   app:
     environment:
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+    image: chrztoph/texterify:${TRAVIS_COMMIT}
     build:
       context: .
       dockerfile: Dockerfile
