--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 volumes:
-  texterify-database: {}
+  database: {}
 services:
   db:
     image: postgres
     volumes:
-      - texterify-database:/var/lib/postgresql/data
+      - database:/var/lib/postgresql/data
   app:
     environment:
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
