--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 install:
   - docker-compose up -d
   - docker-compose run app bin/rails db:create
-  - docker-compose run app bin/rails migrate
+  - docker-compose run app bin/rails db:migrate
 
 script:
   - docker-compose run app bin/rails test
