--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,13 @@ language: ruby
 env:
   global:
     - SECRET_KEY_BASE=8dfc55709e6daaf5d7b2ce70e247374400f47db2e4b6867f67821290b440a0acbe931d5f4d9687f386e5aae3f0377da533450058e131b37dbc16b692c296c941
-    - RAILS_ENV=test
 
 services:
   - docker
 
 install:
   - docker-compose up -d
-  - docker-compose exec app bin/rails db:create
-  - docker-compose exec app bin/rails db:migrate
+  - docker-compose exec app bundle exec rails db:create db:migrate RAILS_ENV=test
 
 script:
   - docker-compose exec app bin/rails test
