--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,15 @@ script:
   - docker-compose exec app bin/rails test
 
 after_success:
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - docker_login_response = echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - if [ $docker_login_response != "Login succeeded"]; then
+      exit 1
+    fi
+
   # The chrztoph/texterify:${TRAVIS_COMMIT} tag is created with docker-compose.
+  # Push to docker registry.
   - docker push chrztoph/texterify:${TRAVIS_COMMIT}
+
   # Tag the master as latest.
   - |
     if [ $TRAVIS_BRANCH == "master" ] && [ $TRAVIS_PULL_REQUEST == "false" ]; then
