Push after image has been tagged as latest

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,12 +30,15 @@ after_success:
       exit 1
     fi
 
-  # The chrztoph/texterify:${TRAVIS_COMMIT} tag is created with docker-compose.
-  # Push to docker registry.
-  - docker push chrztoph/texterify:${TRAVIS_COMMIT}
+  - echo $TRAVIS_BRANCH
+  - echo $TRAVIS_PULL_REQUEST
 
   # Tag the master as latest.
   - |
     if [ $TRAVIS_BRANCH=="master" ] && [ $TRAVIS_PULL_REQUEST=="false" ]; then
       docker tag chrztoph/texterify:${TRAVIS_COMMIT} chrztoph/texterify:latest
     fi
+
+  # The chrztoph/texterify:${TRAVIS_COMMIT} tag is created with docker-compose.
+  # Push to docker registry.
+  - docker push chrztoph/texterify:${TRAVIS_COMMIT}
