--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 install:
   - docker-compose up -d
   - docker-compose exec app bundle exec rails db:create db:migrate RAILS_ENV=test
+  - docker-compose exec app bundle install
 
 script:
   - docker-compose exec app yarn lint
