--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flag-icon-css": "^3.0.0",
     "history": "^4.7.2",
     "js-file-download": "^0.4.1",
+    "less-loader": "^5.0.0",
     "localforage": "^1.7.1",
     "lodash": "^4.17.10",
     "mobx": "^5.9.4",
@@ -44,7 +45,8 @@
     "tslint-react": "^4.0.0",
     "typescript": "^2.7.2",
     "uuid": "^3.3.2",
-    "less-loader": "^5.0.0"
+    "@editorjs/editorjs": "^2.15.0",
+    "@editorjs/list": "^1.4.0"
   },
   "devDependencies": {
     "less": "^3.8.1",
