Change default ports and yarn commands

--- a/package.json
+++ b/package.json
@@ -60,9 +60,9 @@
     "lint:frontend": "tslint --project tsconfig.json -c tslint.json",
     "lint:backend": "bundle exec rubocop",
     "lint": "yarn lint:frontend && yarn lint:backend",
-    "start": "bundle exec rails server",
-    "watch": "./bin/webpack-dev-server",
+    "start": "bundle exec rails server -p 3010",
+    "start:watcher": "./bin/webpack-dev-server",
     "test": "yarn test:backend",
-    "test:backend": "RAILS_ENV=test bundle exec rspec "
+    "test:backend": "RAILS_ENV=test bundle exec rspec"
   }
 }
