--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "texterify",
   "private": true,
   "dependencies": {
+    "@editorjs/editorjs": "^2.15.0",
+    "@editorjs/list": "^1.4.0",
     "@rails/webpacker": "^4.0.2",
     "@types/lodash": "^4.14.110",
     "@types/query-string": "^6.1.0",
@@ -17,17 +19,17 @@
     "babel-preset-react": "^6.24.1",
     "flag-icon-css": "^3.0.0",
     "history": "^4.7.2",
-    "js-file-download": "^0.4.1",
+    "js-file-download": "^0.4.7",
     "less-loader": "^5.0.0",
     "localforage": "^1.7.1",
-    "lodash": "^4.17.10",
-    "mobx": "^5.9.4",
+    "lodash": "^4.17.15",
+    "mobx": "^5.13.0",
     "mobx-persist": "^0.4.1",
-    "mobx-react": "^5.0.0",
+    "mobx-react": "^6.1.3",
     "moment": "^2.22.2",
     "postcss-cssnext": "^3.1.0",
     "prop-types": "^15.6.1",
-    "query-string": "^6.1.0",
+    "query-string": "^6.8.2",
     "react": "^16.2.0",
     "react-avatar-editor": "^11.0.7",
     "react-dom": "^16.2.0",
@@ -37,16 +39,14 @@
     "react-router-dom": "^5.0.0",
     "react-spinkit": "^3.0.0",
     "react_ujs": "^2.4.4",
-    "styled-components": "^4.2.0",
+    "styled-components": "^4.3.2",
     "stylelint-config-standard": "^18.2.0",
     "ts-loader": "^6.0.0",
     "tslint": "^5.9.1",
     "tslint-microsoft-contrib": "^6.1.1",
     "tslint-react": "^4.0.0",
     "typescript": "^2.7.2",
-    "uuid": "^3.3.2",
-    "@editorjs/editorjs": "^2.15.0",
-    "@editorjs/list": "^1.4.0"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "less": "^3.8.1",
