--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-router-dom": "^5.0.1",
     "react-spinkit": "^3.0.0",
     "react_ujs": "^2.6.0",
+    "sanitize-html": "^1.20.1",
     "styled-components": "^4.3.2",
     "stylelint-config-standard": "^18.2.0",
     "ts-loader": "^6.0.4",
