--- a/config/database.yml
+++ b/config/database.yml
@@ -57,8 +57,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  host: db
-  username: postgres
+  host: <%= ENV.fetch("DB_TEST_HOST", "db") %>
+  username: <%= ENV.fetch("DB_TEST_USERNAME", "postgres") %>
   database: texterify_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
