Add missing env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,17 @@ services:
   app:
     environment:
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+      - EMAIL_CONFIRMATION_REQUIRED=${EMAIL_CONFIRMATION_REQUIRED}
+      - SMTP_AUTHENTICATION=${SMTP_AUTHENTICATION}
+      - SMTP_ADDRESS=${SMTP_ADDRESS}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_DOMAIN=${SMTP_DOMAIN}
+      - SMTP_USER_NAME=${SMTP_USER_NAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - SMTP_ENABLE_STARTTLS_AUTO=${SMTP_ENABLE_STARTTLS_AUTO}
+      - SMTP_OPENSSL_VERIFY_MODE=${SMTP_OPENSSL_VERIFY_MODE}
+      - DB_TEST_HOST=${DB_TEST_HOST}
+      - DB_TEST_USERNAME=${DB_TEST_USERNAME}
     image: chrztoph/texterify:${TRAVIS_COMMIT}
     build:
       context: .
