--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "tslint-microsoft-contrib": "^6.2.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "webpack-cli": "^3.3.6"
   },
   "devDependencies": {
     "less": "^3.8.1",
-    "webpack-dev-server": "^3.8.0",
-    "webpack-cli": "^3.3.6"
+    "webpack-dev-server": "^3.8.0"
   },
   "engines": {
     "yarn": ">=1.5.1"
