--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "start": "bundle exec rails server -p 3010",
     "start:watcher": "./bin/webpack-dev-server",
     "test": "yarn test:backend",
-    "test:backend": "RAILS_ENV=test bundle exec rspec"
+    "test:backend": "RAILS_ENV=test bundle exec rspec",
+    "prod-local:setup": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails db:create db:migrate db:seed",
+    "prod-local:precompile": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails assets:precompile",
+    "prod-local:start": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production RAILS_SERVE_STATIC_FILES=true bundle exec rails s"
   }
 }
