--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,11 @@ after_success:
 
   # Tag the master as latest.
   - |
-    if [ $TRAVIS_BRANCH=="master" ] && [ $TRAVIS_PULL_REQUEST=="false" ] then
+    echo $TRAVIS_BRANCH
+    echo $TRAVIS_PULL_REQUEST
+    if [ $TRAVIS_BRANCH=="master" ] && [ $TRAVIS_PULL_REQUEST=="false" ]; then
+      echo "Pushing to docker..."
+
       # Login to docker.
       if echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin 2>&1 | grep --quiet --ignore-case 'error'; then
         exit 1
