--- a/config/database.yml
+++ b/config/database.yml
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  host: db
-  username: postgres
-  database: texterify_production
+  host: <%= ENV.fetch("DB_PROD_HOST", "db") %>
+  username: <%= ENV.fetch("DB_PROD_USERNAME", "postgres") %>
+  database: <%= ENV.fetch("DB_PROD_DATABASE", "texterify_production") %>
