--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "texterify",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
     "@editorjs/editorjs": "^2.15.0",
     "@editorjs/list": "^1.4.0",
-    "@rails/webpacker": "^4.0.7",
+    "@rails/webpacker": "^5.1.1",
     "@types/lodash": "^4.14.138",
     "@types/query-string": "^6.1.0",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "@types/react-dropzone": "^5.1.0",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
@@ -17,6 +21,7 @@
     "antd": "^3.23.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-react": "^6.24.1",
+    "core-js": "3",
     "flag-icon-css": "^3.0.0",
     "history": "^4.7.2",
     "js-file-download": "^0.4.8",
@@ -41,12 +46,12 @@
     "react_ujs": "^2.6.0",
     "sanitize-html": "^1.20.1",
     "styled-components": "^5.1.0",
-    "stylelint-config-standard": "^18.2.0",
-    "ts-loader": "^6.0.4",
-    "tslint": "^5.19.0",
+    "stylelint-config-standard": "^20.0.0",
+    "ts-loader": "^7.0.1",
+    "tslint": "^6.1.1",
     "tslint-microsoft-contrib": "^6.2.0",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.6.2",
+    "tslint-react": "^5.0.0",
+    "typescript": "^3.8.3",
     "uuid": "^7.0.3",
     "webpack-cli": "^3.3.7"
   },
