--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ volumes:
   database: {}
 services:
   db:
+    environment:
+      - POSTGRES_HOST_AUTH_METHOD=trust
     image: postgres
     volumes:
       - database:/var/lib/postgresql/data
