--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   db:
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
-    image: postgres
+    image: postgres:12.2
     volumes:
       - database:/var/lib/postgresql/data
   app:
