Fix database consistency errors

--- a/.database_consistency.yml
+++ b/.database_consistency.yml
@@ -14,3 +14,8 @@ User:
   email+provider:
     MissingUniqueIndexChecker:
       enabled: false
+
+ActiveStorage::Blob:
+  enabled: false
+ActiveStorage::Attachment:
+  enabled: false
