Update packages, replace antd icons

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "texterify",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.0.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
     "@babel/preset-react": "^7.9.4",
@@ -15,17 +16,17 @@
     "@types/react-dom": "^16.9.6",
     "@types/react-dropzone": "^5.1.0",
     "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.5",
+    "@types/react-router-dom": "^5.1.4",
     "@uppy/core": "^1.4.0",
     "@uppy/react": "^1.3.0",
-    "antd": "^3.23.1",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "antd": "^4.1.5",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-react": "^6.24.1",
     "core-js": "3",
     "flag-icon-css": "^3.0.0",
     "history": "^4.7.2",
     "js-file-download": "^0.4.8",
-    "less-loader": "^5.0.0",
+    "less-loader": "^6.0.0",
     "localforage": "^1.7.1",
     "lodash": "^4.17.15",
     "mobx": "^5.13.0",
