--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "texterify",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^1.0.2",
     "@ant-design/icons": "^4.0.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-decorators": "^7.8.3",
@@ -17,12 +18,18 @@
     "@types/react-dropzone": "^5.1.0",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
     "@uppy/core": "^1.4.0",
     "@uppy/react": "^1.3.0",
     "antd": "^4.1.5",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-react": "^6.24.1",
     "core-js": "3",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
     "flag-icon-css": "^3.0.0",
     "history": "^4.7.2",
     "js-file-download": "^0.4.8",
@@ -34,6 +41,7 @@
     "mobx-react": "^6.1.3",
     "moment": "^2.22.2",
     "postcss-cssnext": "^3.1.0",
+    "prettier": "^2.0.5",
     "prop-types": "^15.6.1",
     "query-string": "^6.8.3",
     "react": "^16.9.0",
@@ -67,8 +75,9 @@
     "check:database-consistency": "bundle exec database_consistency",
     "check:database-consistency:test": "RAILS_ENV=test bundle exec database_consistency",
     "lint": "yarn lint:frontend && yarn lint:backend",
-    "lint:frontend": "tslint --project tsconfig.json -c tslint.json",
+    "lint:frontend": "eslint 'app/**/*.ts*'",
     "lint:backend": "bundle exec rubocop",
+    "format": "prettier --write '**/*.{js,jsx,ts,tsx,gql}'",
     "prod-local:setup": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails db:create db:migrate db:seed",
     "prod-local:precompile": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails assets:precompile",
     "prod-local:start": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production RAILS_SERVE_STATIC_FILES=true bundle exec rails s",
