--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "check:database-consistency": "bundle exec database_consistency",
     "check:database-consistency:test": "RAILS_ENV=test bundle exec database_consistency",
     "lint": "yarn lint:frontend && yarn lint:backend",
-    "lint:frontend": "eslint 'app/**/*.ts*'",
+    "lint:frontend": "eslint 'app/javascript/**/*.{js,ts,tsx}'",
     "lint:backend": "bundle exec rubocop",
-    "format": "prettier --write '**/*.{js,jsx,ts,tsx,gql}'",
+    "format": "prettier --write 'app/javascript/**/*.{js,ts,tsx}'",
     "prod-local:setup": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails db:create db:migrate db:seed",
     "prod-local:precompile": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails assets:precompile",
     "prod-local:start": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production RAILS_SERVE_STATIC_FILES=true bundle exec rails s",
