--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,27 @@
     "plugins": ["prettier"],
     "ignorePatterns": ["react-app-env.d.ts"],
     "rules": {
+        "@typescript-eslint/array-type": ["error", { "type": "array" }],
+        "@typescript-eslint/consistent-type-definitions": "error",
+        "@typescript-eslint/interface-name-prefix": ["error", "always"],
+        "@typescript-eslint/member-delimiter-style": "error",
+        "@typescript-eslint/member-ordering": "error",
+        "@typescript-eslint/no-empty-function": "error",
+        "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/no-use-before-define": "error",
+        "@typescript-eslint/no-var-requires": "error",
+        "@typescript-eslint/prefer-for-of": "error",
+        "@typescript-eslint/prefer-function-type": "error",
+        "@typescript-eslint/quotes": ["error", "double", { "avoidEscape": true }],
+        "@typescript-eslint/semi": ["error", "always"],
+        "@typescript-eslint/unified-signatures": "error",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": [
+            "error",
+            { "argsIgnorePattern": "^_" }
+        ],
+        "@typescript-eslint/unbound-method": "off",
         "prettier/prettier": "error",
         "arrow-body-style": ["error", "always"],
         "curly": "error",
