--- a/.eslintrc
+++ b/.eslintrc
@@ -26,16 +26,16 @@
         "@typescript-eslint/unified-signatures": "error",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-explicit-any": "off",
-        "@typescript-eslint/no-unused-vars": [
-            "error",
-            { "argsIgnorePattern": "^_" }
-        ],
+        "@typescript-eslint/no-unused-vars": "off",
         "@typescript-eslint/unbound-method": "off",
+        "@typescript-eslint/require-await": "off",
+        "@typescript-eslint/camelcase": "off",
+        "require-await": "off",
         "prettier/prettier": "error",
         "arrow-body-style": ["error", "always"],
         "curly": "error",
         "space-before-blocks": "error",
-        "camelcase": "error",
+        "camelcase": "off",
         "complexity": "off",
         "constructor-super": "error",
         "dot-notation": "error",
