--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^16.9.0",
     "react-dropzone": "^10.1.8",
     "react-flag-icon-css": "^1.0.23",
+    "react-hot-keys": "^2.6.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-spinkit": "^3.0.0",
