--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@editorjs/editorjs": "^2.15.0",
     "@editorjs/list": "^1.4.0",
     "@rails/webpacker": "^5.1.1",
+    "@stripe/stripe-js": "^1.9.0",
     "@types/lodash": "^4.14.138",
     "@types/query-string": "^6.1.0",
     "@types/react": "^16.9.34",
@@ -79,10 +80,10 @@
     "prod-local:setup": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails db:create db:migrate db:seed",
     "prod-local:precompile": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production bundle exec rails assets:precompile",
     "prod-local:start": "SECRET_KEY_BASE=`bin/rails secret` RAILS_ENV=production RAILS_SERVE_STATIC_FILES=true bundle exec rails s",
-    "start": "RUBYOPT='-W:no-deprecated' bundle exec rails server -p 3000 -b \"0.0.0.0\"",
+    "start": "bundle exec rails server -p 3000 -b \"0.0.0.0\"",
     "start:watcher": "./bin/webpack-dev-server",
-    "test": "RUBYOPT='-W:no-deprecated' yarn test:backend",
+    "test": "yarn test:backend",
     "test:backend": "RAILS_ENV=test bundle exec rspec",
-    "dangerous:recreate-database": "RUBYOPT='-W:no-deprecated' bundle exec rails db:drop; RUBYOPT='-W:no-deprecated' bundle exec rails db:create; RUBYOPT='-W:no-deprecated' bundle exec rails db:migrate; RUBYOPT='-W:no-deprecated' bundle exec rails db:seed"
+    "dangerous:recreate-database": "bundle exec rails db:drop; bundle exec rails db:create; bundle exec rails db:migrate; bundle exec rails db:seed"
   }
 }
