Add new env variables to template

--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ SMTP_OPENSSL_VERIFY_MODE=
 
 DB_TEST_HOST=
 DB_TEST_USERNAME=
+
+GOOGLE_CLOUD_PROJECT=
+GOOGLE_CLOUD_KEYFILE=
+GOOGLE_CLOUD_OTA_BUCKET_NAME=
