--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-react": "^6.24.1",
     "core-js": "3",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
