--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "tabWidth": 4,
   "htmlWhitespaceSensitivity": "ignore",
   "trailingComma": "none",
-  "printWidth": 120
+  "printWidth": 120,
+  "useTabs": false
 }
