--- a/.env.development.template
+++ b/.env.development.template
@@ -4,7 +4,7 @@ SMTP_AUTHENTICATION=
 SMTP_ADDRESS=
 SMTP_PORT=
 SMTP_DOMAIN=
-SMTP_USER_NAME=
+SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_ENABLE_STARTTLS_AUTO=
 SMTP_OPENSSL_VERIFY_MODE=
@@ -16,4 +16,4 @@ GOOGLE_CLOUD_PROJECT=
 GOOGLE_CLOUD_KEYFILE=
 GOOGLE_CLOUD_OTA_BUCKET_NAME=
 
-SENTRY_DSN=
+SENTRY_DSN_BACKEND=
