--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - SMTP_ADDRESS=${SMTP_ADDRESS}
       - SMTP_PORT=${SMTP_PORT}
       - SMTP_DOMAIN=${SMTP_DOMAIN}
-      - SMTP_USER_NAME=${SMTP_USER_NAME}
+      - SMTP_USERNAME=${SMTP_USERNAME}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
       - SMTP_ENABLE_STARTTLS_AUTO=${SMTP_ENABLE_STARTTLS_AUTO}
       - SMTP_OPENSSL_VERIFY_MODE=${SMTP_OPENSSL_VERIFY_MODE}
