--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@editorjs/editorjs": "^2.15.0",
     "@editorjs/list": "^1.4.0",
     "@rails/webpacker": "^5.1.1",
+    "@sentry/react": "^5.27.4",
+    "@sentry/tracing": "^5.27.4",
     "@stripe/stripe-js": "^1.9.0",
     "@types/lodash": "^4.14.138",
     "@types/query-string": "^6.1.0",
