Add webpack plugin

--- a/.env.development.template
+++ b/.env.development.template
@@ -16,4 +16,7 @@ GOOGLE_CLOUD_PROJECT=
 GOOGLE_CLOUD_KEYFILE=
 GOOGLE_CLOUD_OTA_BUCKET_NAME=
 
+SENTRY_AUTH_TOKEN=
+SENTRY_ORGANIZATION_BACKEND=
+SENTRY_PROJECT_BACKEND=
 SENTRY_DSN_BACKEND=
