Add missing env variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,11 @@ services:
   app:
     environment:
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
-      - EMAIL_CONFIRMATION_REQUIRED=${EMAIL_CONFIRMATION_REQUIRED}
-      - SMTP_AUTHENTICATION=${SMTP_AUTHENTICATION}
-      - SMTP_ADDRESS=${SMTP_ADDRESS}
-      - SMTP_PORT=${SMTP_PORT}
-      - SMTP_DOMAIN=${SMTP_DOMAIN}
-      - SMTP_USERNAME=${SMTP_USERNAME}
-      - SMTP_PASSWORD=${SMTP_PASSWORD}
-      - SMTP_ENABLE_STARTTLS_AUTO=${SMTP_ENABLE_STARTTLS_AUTO}
-      - SMTP_OPENSSL_VERIFY_MODE=${SMTP_OPENSSL_VERIFY_MODE}
       - DB_TEST_HOST=${DB_TEST_HOST}
       - DB_TEST_USERNAME=${DB_TEST_USERNAME}
+      - SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
+      - SENTRY_ORGANIZATION=${SENTRY_ORGANIZATION}
+      - SENTRY_PROJECT=${SENTRY_PROJECT}
     image: chrztoph/texterify:${TRAVIS_COMMIT}
     build:
       context: .
