Fix sentry source map upload, don't exit build on sentry errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       - DB_TEST_HOST=${DB_TEST_HOST}
       - DB_TEST_USERNAME=${DB_TEST_USERNAME}
       - SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
-      - SENTRY_ORGANIZATION=${SENTRY_ORGANIZATION}
-      - SENTRY_PROJECT=${SENTRY_PROJECT}
+      - SENTRY_ORGANIZATION_BACKEND=${SENTRY_ORGANIZATION_BACKEND}
+      - SENTRY_PROJECT_BACKEND=${SENTRY_PROJECT_BACKEND}
     image: chrztoph/texterify:${TRAVIS_COMMIT}
     build:
       context: .
