--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
       - SENTRY_ORGANIZATION_BACKEND=${SENTRY_ORGANIZATION_BACKEND}
       - SENTRY_PROJECT_BACKEND=${SENTRY_PROJECT_BACKEND}
+      - COMMIT_HASH=${TRAVIS_COMMIT}
     image: chrztoph/texterify:${TRAVIS_COMMIT}
     build:
       context: .
