Try to fix travis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,14 +13,13 @@ services:
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
       - DB_TEST_HOST=${DB_TEST_HOST}
       - DB_TEST_USERNAME=${DB_TEST_USERNAME}
-      - SENTRY_AUTH_TOKEN=${SENTRY_AUTH_TOKEN}
-      - SENTRY_ORGANIZATION_BACKEND=${SENTRY_ORGANIZATION_BACKEND}
-      - SENTRY_PROJECT_BACKEND=${SENTRY_PROJECT_BACKEND}
-      - COMMIT_HASH=${COMMIT_HASH}
     image: chrztoph/texterify:${TRAVIS_COMMIT}
     build:
       context: .
       args:
+        SENTRY_AUTH_TOKEN: ${SENTRY_AUTH_TOKEN}
+        SENTRY_ORGANIZATION_BACKEND: ${SENTRY_ORGANIZATION_BACKEND}
+        SENTRY_PROJECT_BACKEND: ${SENTRY_PROJECT_BACKEND}
         COMMIT_HASH: ${COMMIT_HASH}
       dockerfile: Dockerfile
     depends_on:
