--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -67,6 +67,10 @@ Style/RedundantReturn:
 Style/CaseLikeIf:
   Enabled: false
 
+# Disabled because of pundit headless policies
+Style/StructInheritance:
+  Enabled: false
+
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: "indented"
 
