--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   "devDependencies": {
     "husky": "^4.3.0",
     "less": "^3.10.3",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-dev-server": "^3.8.0"
   },
   "engines": {
@@ -89,7 +90,8 @@
     "start:watcher:no-container-webpacker": "WEBPACKER_DEV_SERVER_PORT=3012 WEBPACKER_DEV_SERVER_PUBLIC=0.0.0.0:3012 ./bin/webpack-dev-server",
     "test": "yarn test:backend",
     "test:backend": "RAILS_ENV=test bundle exec rspec",
-    "dangerous:recreate-database": "bundle exec rails db:drop && bundle exec rails db:create && bundle exec rails db:migrate && bundle exec rails db:seed"
+    "dangerous:recreate-database": "bundle exec rails db:drop && bundle exec rails db:create && bundle exec rails db:migrate && bundle exec rails db:seed",
+    "webpack-bundle-analyzer": "bin/webpack --profile --json > webpacker-stats.json && node_modules/.bin/webpack-bundle-analyzer webpacker-stats.json public/packs"
   },
   "husky": {
     "hooks": {
