Add env variables to enable mail delivery in dev

--- a/.env.development.template
+++ b/.env.development.template
@@ -12,6 +12,9 @@ SMTP_PASSWORD=
 SMTP_ENABLE_STARTTLS_AUTO=
 SMTP_OPENSSL_VERIFY_MODE=
 
+MAIL_RAISE_DELIVERY_ERRORS_DEV=
+MAIL_PERFORM_DELIVERIES_DEV=
+
 DB_TEST_HOST=
 DB_TEST_USERNAME=
 
