--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -7,22 +7,21 @@ on:
         branches: [master]
 
 jobs:
-    build-and-push:
+    test:
         runs-on: ubuntu-latest
-
+        env:
+          COMMIT_HASH: $GITHUB_SHA
+          DB_TEST_HOST: db
+          DB_TEST_USERNAME: postgres
+          SECRET_KEY_BASE: 8dfc55709e6daaf5d7b2ce70e247374400f47db2e4b6867f67821290b440a0acbe931d5f4d9687f386e5aae3f0377da533450058e131b37dbc16b692c296c941
         steps:
             - uses: actions/checkout@v2
-            - name: Run docker compose
+            - name: Run docker-compose
               run: docker-compose up -d
             - name: Create and seed test database
               run: docker-compose exec app bundle exec rails db:create db:migrate db:seed RAILS_ENV=test
             - name: Install test dependencies
               run: docker-compose exec app bundle install --with test
-              env:
-                SECRET_KEY_BASE: 8dfc55709e6daaf5d7b2ce70e247374400f47db2e4b6867f67821290b440a0acbe931d5f4d9687f386e5aae3f0377da533450058e131b37dbc16b692c296c941
-                DB_TEST_HOST: db
-                DB_TEST_USERNAME: postgres
-                COMMIT_HASH: $GITHUB_SHA
             - name: Run linters
               run: docker-compose exec app yarn lint
             - name: Run tests
@@ -30,6 +29,13 @@ jobs:
             - name: Check database consistency
               run: docker-compose exec app yarn check:database-consistency:test
               # run: docker-compose exec app bundle exec rails db:drop RAILS_ENV=test
+
+    build-and-push:
+        runs-on: ubuntu-latest
+        needs: [test]
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        steps:
+            - uses: actions/checkout@v2
             - name: Login to DockerHub
               uses: docker/login-action@v1
               with:
