--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -3,8 +3,6 @@ name: Build & Push
 on:
     push:
         branches: [master]
-    pull_request:
-        branches: [master]
 
 jobs:
     test:
@@ -33,7 +31,7 @@ jobs:
     build-and-push:
         runs-on: ubuntu-latest
         needs: [test]
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/master' }}
         steps:
             - uses: actions/checkout@v2
             - name: Login to DockerHub
@@ -42,10 +40,10 @@ jobs:
                   username: ${{ secrets.DOCKERHUB_USERNAME }}
                   password: ${{ secrets.DOCKERHUB_TOKEN }}
             - name: Build the Docker image
-              run: docker build . --file Dockerfile --tag chrztoph/texterify:$GITHUB_SHA
+              run: docker build . --file Dockerfile --tag chrztoph/texterify:$COMMIT_HASH
             - name: Tag image also as latest
-              run: docker tag chrztoph/texterify:$GITHUB_SHA chrztoph/texterify:latest
+              run: docker tag chrztoph/texterify:$COMMIT_HASH chrztoph/texterify:latest
             - name: Push images
               run: |
-                  docker push chrztoph/texterify:$GITHUB_SHA
+                  docker push chrztoph/texterify:$COMMIT_HASH
                   docker push chrztoph/texterify:latest
